--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="shortcut icon"
+    href="https://vignette.wikia.nocookie.net/logopedia/images/8/82/Flickr_Favicon.jpg/revision/latest?cb=20121003110333" />
+  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <!--
@@ -20,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React Gallery</title>
+  <title>Flickr Gallery</title>
 </head>
 
 <body>
